@@ -3,11 +3,11 @@ export SERVICE_LIST="${SERVICE_LIST}${THISSERVICE} "
 
 help() {
   echo "Usage ./hive <parameters> --service serviceName <service parameters>"
-  echo "Service List: $SERVICE_LIST"  
+  echo "Service List: $SERVICE_LIST"
   echo "Parameters parsed:"
-  echo "  --auxpath : Auxillary jars " 
+  echo "  --auxpath : Auxillary jars "
   echo "  --config : Hive configuration directory"
-  echo "  --serivce : Starts specific service/component. cli is default" 
+  echo "  --service : Starts specific service/component. cli is default"
   echo "Parameters used:"
   echo "  HADOOP_HOME : Hadoop install directory"
   echo "  HIVE_OPT : Hive options"
