@@ -173,6 +173,9 @@ Release 0.5.0 -  Unreleased
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
 
+    HIVE-1105. Add service script for starting metastore server.
+    (John Sichi via zshao)
+
   OPTIMIZATIONS
 
   BUG FIXES
